<resources>
    <string name="app_name">atb</string>
    <string name="register">Реєстрація</string>
    <string name="registered">Реєструватися</string>
    <string name="email">Електронна пошта</string>
    <string name="fristName">Ім\'я</string>
    <string name="selectImage">Обрати фото</string>
    <string name="hello">Привіт</string>
    <string name="users">Користувачі</string>
    <string name="logined">Війти</string>
    <string name="password">Пароль</string>
    <string name="login">Вхід</string>
    <string name="logout">Вихід</string>
    <string name="home">Головна</string>
</resources>