<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/m_main"
        android:title="@string/home"
        app:showAsAction="never"/>
    <group
        android:id="@+id/group_anonimus"
        android:visible="true">
        <item android:id="@+id/m_register"
            android:title="@string/register"
            app:showAsAction="never"/>

        <item android:id="@+id/m_login"
            android:title="@string/login"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/group_auth"
        android:visible="false">
        <item
            android:id="@+id/m_users"
            android:title="@string/users"
            app:showAsAction="never" />

        <item
            android:id="@+id/m_logout"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>


</menu>